<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">scchildcare</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">434134920041249</string>
    <string name="get_started">To get started, log in using Facebook</string>
	<string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="latlng">latlng</string>
     <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="get_location">Get Location</string>
    <string name="geocode_label">Enter an an address or Zipcode</string>
    <!-- button string -->
    <string name="button_locate">Get</string>
       <string name="latlng">latlng</string>
     <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    
</resources>
